--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
     <h1>Dude, you are quite the awesome dude.</h1>
+    <p>And dude, you are really great!</p>
 
 <img src="https://octodex.github.com/images/daftpunktocat-thomas.gif" id="octocat" alt="octocat-gif" />
 
